--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-        <title>OpenROV Dashboard</title>
+        <title>OpenROV Mission Control</title>
         <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="themes/OpenROV/css/style.css">
-        <link href="css/ui-lightness/jquery-ui-1.8.23.custom.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -16,7 +14,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </a>
-              <p class="navbar-header"><a class="navbar-brand" href="#"><img src="themes/OpenROV/img/logo.png" class="logo"/>&nbsp;Dashboard</a></p>
+              <p class="navbar-header"><a class="navbar-brand" href="#"><img src="" class="logo"/>&nbsp;Mission Control</a></p>
               <div class="navbar-collapse collapse">
                 <ul class="navbar-right" id="menu-bar">
                   <!--<li><a href="#" id="show-diagnostic">Diagnostic</a></li>-->
@@ -37,26 +35,13 @@
         <script type='text/javascript' src="bower_components/jquery/dist/jquery.min.js"></script>
         <script type='text/javascript' src="bower_components/jquery-ui/jquery-ui.min.js"></script>
         <script type='text/javascript' src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script type='text/javascript' src="js/libs/mousetrap.min.js"></script>
-        <script type='text/javascript' src='js/libs/knockout-2.1.0.js'></script>
-        <script type='text/javascript' src='js/DashboardViewModel.js'></script>
-        <script type='text/javascript' src='js/Dashboard.js'></script>
-        <script type='text/javascript' src='js/ProcessModel.js'></script>
-    	<script type='text/javascript' src="js/blackbox.js"></script>
-	    <script src="/socket.io/socket.io.js"></script>
+  	    <script src="/socket.io/socket.io.js"></script>
 
         <script>
-      		var viewmodel;
           $(function() {
 
             var socket = io.connect();
-            viewmodel = new DashboardViewModel(socket);
-            
-            var dashboard = new Dashboard(socket, viewmodel);
 
-            console.log('Applying bindings');
-
-            ko.applyBindings(dashboard.viewModel);
           });
         </script>
   </body>
