--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
         <title>OpenROV Mission Control</title>
         <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body>
