--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,20 @@
+html { height: 100%; }
+
+body {
+    padding-top: 65px;
+    padding-bottom: 100px;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+
 .navbar-inverse {
     background-color: #0c2f3e;
+}
+
+#main-row {
+    top: 50px;
 }
