--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -4,50 +4,53 @@
         <title>OpenROV Mission Control</title>
         <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
+
+        <% for(var i=0; i< assets.styles.length; i++) {%>
+        <link rel="stylesheet" href="<%= assets.styles[i] %>"><% } %>
+
   </head>
 
-  <body ng-app>
-        <div class="navbar navbar-inverse navbar-fixed-top">
-          <div class="container navbar-left">
-            <div id="menu">
-              <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </a>
-              <p class="navbar-header"><a class="navbar-brand" href="#"><img src="" class="logo"/>&nbsp;Mission Control</a></p>
-              <div class="navbar-collapse collapse">
-                <ul class="navbar-right" id="menu-bar">
-                  <!--<li><a href="#" id="show-diagnostic">Diagnostic</a></li>-->
-                </ul>
-              </div><!--/.nav-collapse -->
-            </div>
-          </div>
+  <body ng-app="MissionControlApp">
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container navbar-left">
+        <div id="menu">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <p class="navbar-header"><a class="navbar-brand" href="#"><img src="" class="logo"/>&nbsp;Mission Control</a></p>
+          <div class="navbar-collapse collapse">
+            <ul class="navbar-right" id="menu-bar">
+              <!--<li><a href="#" id="show-diagnostic">Diagnostic</a></li>-->
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
-        
-        <!-- Main ROW -->
-        <div id="main-row" class="full-height">
-    		aa {{ "foo Bar" }}
-          <input type="text" ng-model="yourName" placeholder="Enter a name here">
-          <h1>Hello, {{ yourName }}!</h1>
+      </div>
+    </div>
+
+    <!-- Main ROW -->
+    <div id="main-row" class="full-height">
+      <div ng-controller="exampleController">
+        <div ng-repeat="rov in exampleList">
+          <strong>No: </strong><span>{{ rov.number }}</span><br>
+          <strong>Name: </strong><span>{{ rov.name }}</span>
         </div>
-        
-        
-        <!-- Le javascript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script type='text/javascript' src="bower_components/angular/angular.js"></script>
-        <script type='text/javascript' src="bower_components/jquery/dist/jquery.min.js"></script>
-        <script type='text/javascript' src="bower_components/jquery-ui/jquery-ui.min.js"></script>
-        <script type='text/javascript' src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  	    <script src="/socket.io/socket.io.js"></script>
+      </div>
+    </div>
 
-        <script>
-          $(function() {
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script type='text/javascript' src="bower_components/angular/angular.js"></script>
+    <script type='text/javascript' src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script type='text/javascript' src="bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <script type='text/javascript' src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/app.js"></script>
 
-            var socket = io.connect();
+    <% for(var i=0; i< assets.scripts.length; i++) {%>
+    <script type="text/javascript" src="<%= assets.scripts[i] %>"></script><% } %>
 
-          });
-        </script>
   </body>
 </html>
