--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -45,8 +45,15 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/app.js"></script>
 
-    <% for(var i=0; i< assets.scripts.length; i++) {%>
+    <%
+    var ngModulesToLoad = assets.ngModules();
+    console.log(ngModulesToLoad );
+    for(var i=0; i< assets.scripts.length; i++) {%>
     <script type="text/javascript" src="<%= assets.scripts[i] %>"></script><% } %>
+
+    <script type="text/javascript">
+      angular.module('MissionControlAppSubModules', [<%- ngModulesToLoad %>]);
+    </script>
 
   </body>
 </html>
